--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fontsource/roboto": "^4.5.8",
     "@fontsource/saira-stencil-one": "^4.5.10",
     "@fontsource/work-sans": "^4.5.14",
     "@testing-library/jest-dom": "^5.16.5",
